@@ -1452,10 +1452,15 @@ void identify(object *op) {
         }
     }
 
-    /* If the object is on a map, make sure we update its face */
-    if (op->map)
+    if (op->map) {
+        /* If the object is on a map, make sure we update its face.
+         * Also send name and such information to a player standing on it.
+         */
+        object *player = map_find_by_type(op->map, op->x, op->y, PLAYER);
+        if (player)
+            esrv_update_item(UPD_FACE | UPD_NAME, player, op);
         object_update(op, UP_OBJ_FACE);
-    else {
+    } else {
         pl = object_get_player_container(op->env);
         if (pl)
             /* A lot of the values can change from an update - might as well send
